--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title >Mohd-Fazal-Ali</title>
-     <link rel="stylesheet" href="assets/css/theme.css">
+     <!-- <link rel="stylesheet" href="assets/css/theme.css"> -->
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -442,7 +442,7 @@ Every pixel matters. This project is a step toward a faster, leaner web</p>
         </div>
     </footer>
 
-    <script src="assets/js/theme.js"></script>
+    <!-- <script src="assets/js/theme.js"></script> -->
     <script src="assets/js/main.js"></script>
 </body>
 </html>
